koa & Nunjucks set-up
Initial set-up of koa & Nunjucks, nothing final at all

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tnk",
   "version": "0.0.1",
-  "description": "Tailwind, Nunjucks, and Koa scaffolding & boilerplate",
+  "description": "tailwindcss, Nunjucks, and koa scaffolding & boilerplate",
   "main": "src/client/app.main.js",
   "scripts": {
     "clean": "rimraf ./dist",
@@ -10,12 +10,12 @@
     "test:unit": "jest --projects test/unit"
   },
   "keywords": [
-    "Tailwind",
-    "Koa",
+    "tailwindcss",
+    "koa",
     "Nunjucks",
     "Babel",
     "Javascript",
-    "Rollup"
+    "rollup"
   ],
   "author": "wan",
   "license": "MIT",
@@ -35,16 +35,28 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
-    "nunjucks": "^3.2.3",
     "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
     "postcss-load-config": "^3.0.1",
     "postcss-modules": "^4.0.0",
     "postcss-preset-env": "^6.7.0",
     "rollup": "^2.41.2",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^2.0.3"
+  },
+  "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "@koa/router": "^10.0.0",
+    "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
+    "koa-compress": "^5.0.1",
+    "koa-helmet": "^6.1.0",
+    "koa-logger": "^3.2.1",
+    "koa-nunjucks-async": "^1.2.0",
+    "koa-static": "^5.0.0",
+    "nunjucks": "^3.2.3"
   }
 }
