--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "tnk",
   "version": "0.0.1",
   "description": "tailwindcss, Nunjucks, and koa scaffolding & boilerplate",
-  "main": "src/client/app.main.js",
+  "main": "./src/server/server.main.js",
   "scripts": {
     "clean": "rimraf ./dist",
     "build:dev": "rollup -c --environment NODE_ENV:development",
     "build:prod": "rollup -c --environment NODE_ENV:production",
+    "start:dev": "npm run clean && npm run build:dev && node ./dist/server.main.js",
+    "start:prod": "npm run clean && npm run build:prod && node ./dist/server.main.js",
     "test:unit": "jest --projects test/unit"
   },
   "keywords": [
@@ -28,7 +30,6 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
-    "autoprefixer": "^10.2.5",
     "core-js": "^3.9.1",
     "cssnano": "^4.1.10",
     "eslint": "^7.22.0",
@@ -38,11 +39,9 @@
     "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
     "postcss-load-config": "^3.0.1",
-    "postcss-modules": "^4.0.0",
     "postcss-preset-env": "^6.7.0",
     "rollup": "^2.41.2",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^2.0.3"
